# physically-viable-world-models

./: .gitignore  README.md  pyproject.toml
docs/: index.html  paper.tex
scripts/: export_frames_genesis.py  export_frames_newton.py  render_continuous_liquid_videos.py  render_ramp_tower_video.py  run_ramp_tower.py  run_robotic_arm_pour_genesis.py  run_robotic_arm_pour_honey_genesis.py  run_robotic_arm_pour_medium_genesis.py  run_robotic_arm_pour_target_genesis.py  run_robotic_arm_pour_viscosity_genesis.py
src/npm_sim/: __init__.py  export.py  materials.py  ramp_tower.py  rigid_ramp_tower.py  roboarm_wall.py  robotic_arm_pour_genesis.py
tests/: test_ramp_tower_smoke.py  test_rigid_ramp_tower_smoke.py  test_robotic_arm_pour_genesis_smoke.py
