[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npm-sim"
version = "0.1.0"
description = "Small Newton and Genesis simulation demos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
newton = [
    "newton[examples]>=1.1.0",
]
genesis = [
    "genesis-world>=0.4.7",
]
calibration = [
    "matplotlib>=3.7.0",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
